update email template

--- a/app/templates/email.html
+++ b/app/templates/email.html
@@ -1,6 +1,6 @@
 <h2>Er is nu een vaccin beschikbaar op <a href=https://www.prullenbakvaccin.nl/>prullenbakvaccin.nl</a></h2>
 <p>De locatie blijft maar <b>10 minuten</b> zichtbaar op de website. Zorg dat u de informatie op prullenbakvaccin.nl goed heeft doorgelezen. <br>
-<b>Als u naar de locatie gaat vergeet dan niet:</b>
+U wordt afgeraden om naar de prik locatie te gaan als u niet binnen 10-20 minuten na ontvangen van deze mail ter plaatse kan zijn. <b>Als u naar de locatie gaat vergeet dan niet:</b>
 <ul>
 <li>Geldig paspoort, ID-bewijs of rijbewijs</li>
 <li>Het uitprinten en meenemen van de <a href="https://www.nhg.org/sites/default/files/content/nhg_org/uploads/final_gezondheidsverklaring_03_2021_web.pdf" target="_blank">'gezondheidscheck'</a>.</li>
