--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -4,8 +4,8 @@
 	<div class="container">
 		<br>
 		<h2>Meldingen voor prullenbakvaccin.nl in mijn omgeving ontvangen</h1>
-		<p><b>Deze website in niet onderdeel van prullenbakvaccin.nl</b>. Lees eerst goed <a href="https://www.prullenbakvaccin.nl">prullenbakvaccin.nl</a> door voordat u zich hier aanmeldt.<br>
-		Wij sturen u een email als er een vaccin in de omgeving beschikbaar is op prullenbakvaccin.nl<br>
+		<p><b>Deze website in niet onderdeel van prullenbakvaccin.nl</b>. Lees eerst goed de informatie op <a href="https://www.prullenbakvaccin.nl">prullenbakvaccin.nl</a> door voordat u zich hier aanmeldt.<br>
+		U ontvangt een email als er een vaccin in de omgeving beschikbaar is op prullenbakvaccin.nl. U moet binnen 20 minuten na ontvangen van de melding bij de locatie aanwezig zijn. Er zijn meestal minder dan 10 vaccins over. <b>OP=OP</b><br>
 		Vergeet niet een geprinte <a href="https://www.nhg.org/sites/default/files/content/nhg_org/uploads/final_gezondheidsverklaring_03_2021_web.pdf" target="_blank">gezondheidscheck</a> bijdehand te hebben voor wanneer u naar een priklocatie gaat.</p>
 		<form action="" method="post">
 			<div class="form-group">
@@ -54,12 +54,16 @@
 		<h3>Meer informatie:</h3>
 		<p><b>Ik heb een vraag over…</b><br>
 		Dan kunt u het beste kijken op <a href="https://www.prullenbakvaccin.nl">prullenbakvaccin.nl</a>. Wij staan los van prullenbakvaccin.nl en sturen alleen een melding als er iets beschikbaar is op de site.<br><br>
+		<b>Waarom kan ik niet meer dan 15km selecteren?</b><br>
+		Omdat er minder dan 10 vaccins beschikbaar zijn en er veel vraag naar is heeft het alleen zin om de naar de locatie te komen als u er binnen 10-20 minuten kan zijn. Anders zijn de vaccins waarschijnlijk al op.<br><br>
+		<b>Kan ik voor meerdere locaties meldingen krijgen? bijv. thuis en werk </b><br>
+		Elk emailadres kan helaas maar 1 keer ingeschreven worden. U kunt wel een ander emailadres gebruiken.<br><br>
 		<b>Vragen of feedback over deze website?</b><br>
 		U kunt contact met ons opnemen door een email te sturen naar dev.yanowilke@gmail.com<br><br>
 		<b>Ik wil geen emails meer ontvangen.</b><br>
-		In de email vindt u een link om u uit te schrijven. Uw gegevens worden dan ook automatisch verwijderd. Wij zullen uw gegevens nooit voor commerciële doeleinden gebruiken.<br><br>
+		In de email vindt u een link om u uit te schrijven. Uw gegevens worden dan ook automatisch verwijderd. Uw gegevens zullen nooit voor commerciële doeleinden gebruiken.<br><br>
 		<b>Hoe werkt deze website?</b><br>
-		Wij houden automatisch prullenbakvaccin.nl in de gaten of er vaccins beschikbaar komen. Met uw postcode kijken we of het bij u in de buurt is en sturen u dan een email. Alles is in Python geschreven en de code is openbaar op <a href="https://github.com/ywilke/PrullenbakVaccinNotificatie">github</a>.<br>
+		Deze website houdt automatisch prullenbakvaccin.nl in de gaten of er vaccins beschikbaar komen. Op basis van uw postode sturen we u een email als er een vaccin beschikbaar is in de buurt. Alles is in Python geschreven en de code is openbaar op <a href="https://github.com/ywilke/PrullenbakVaccinNotificatie">github</a>.<br>
 		</p>
 		
 	</div>
