--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -3,8 +3,8 @@
 {% block content %}
 	<div class="container">
 		<br>
-		<h2>Meldingen voor prullenbakvaccin.nl in mijn omgeving ontvangen</h1>
-		<p><b>Deze website in niet onderdeel van prullenbakvaccin.nl</b>. Lees eerst goed de informatie op <a href="https://www.prullenbakvaccin.nl">prullenbakvaccin.nl</a> door voordat u zich hier aanmeldt.<br>
+		<h2>Meldingen voor beschikbaarheid op prullenbakvaccin.nl in mijn omgeving ontvangen</h1>
+		<p><b>Deze website in niet onderdeel van prullenbakvaccin.nl. We brengen u alleen op de hoogte van beschikbaarheid op de website.</b> Lees eerst goed de informatie op <a href="https://www.prullenbakvaccin.nl">prullenbakvaccin.nl</a> door voordat u zich hier aanmeldt.<br>
 		U ontvangt een email als er een vaccin in de omgeving beschikbaar is op prullenbakvaccin.nl. U moet binnen 20 minuten na ontvangen van de melding bij de locatie aanwezig zijn. Er zijn meestal minder dan 10 vaccins over. <b>OP=OP</b><br>
 		Vergeet niet een geprinte <a href="https://www.nhg.org/sites/default/files/content/nhg_org/uploads/final_gezondheidsverklaring_03_2021_web.pdf" target="_blank">gezondheidscheck</a> bijdehand te hebben voor wanneer u naar een priklocatie gaat.</p>
 		<form action="" method="post">
@@ -28,6 +28,10 @@
 							</select>
 					</div>
 				</div>
+                      <input class="form-check-input" type="checkbox" value="akkoord" id="flexCheckDefault" name="akkoord">
+                      <label class="form-check-label" for="flexCheckDefault">
+                        Ik ga akkoord met de <a href="/voorwaarden.txt" target="_blank">voorwaarden</a> en heb de <a href="/privacy_statement.txt" target="_blank">privacy statement</a> gelezen en ben ouder dan 16.
+                      </label>
 					<div class="col-sm-2">
 						<button type="submit" class="btn btn-primary">Aanmelden</button>
 					</div>
@@ -62,9 +66,6 @@
 		U kunt contact met ons opnemen door een email te sturen naar dev.yanowilke@gmail.com<br><br>
 		<b>Ik wil geen emails meer ontvangen.</b><br>
 		In de email vindt u een link om u uit te schrijven. Uw gegevens worden dan ook automatisch verwijderd. Uw gegevens zullen nooit voor commerciële doeleinden gebruiken.<br><br>
-		<b>Hoe werkt deze website?</b><br>
-		Deze website houdt automatisch prullenbakvaccin.nl in de gaten of er vaccins beschikbaar komen. Op basis van uw postode sturen we u een email als er een vaccin beschikbaar is in de buurt. Alles is in Python geschreven en de code is openbaar op <a href="https://github.com/ywilke/PrullenbakVaccinNotificatie">github</a>.<br>
-		</p>
 		
 	</div>
 {% endblock content %}
