--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -30,7 +30,7 @@
 				</div>
                       <input class="form-check-input" type="checkbox" value="akkoord" id="flexCheckDefault" name="akkoord">
                       <label class="form-check-label" for="flexCheckDefault">
-                        Ik ga akkoord met de <a href="/voorwaarden.txt" target="_blank">voorwaarden</a> en heb de <a href="/privacy_statement.txt" target="_blank">privacy statement</a> gelezen en ben ouder dan 16.
+                        Ik ga akkoord met de <a href="/voorwaarden.txt" target="_blank">voorwaarden</a> en heb de <a href="/privacy_statement.txt" target="_blank">privacy statement</a> gelezen en ben ouder dan 16 jaar.
                       </label>
 					<div class="col-sm-2">
 						<button type="submit" class="btn btn-primary">Aanmelden</button>
