--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -7,7 +7,7 @@
 		<p><b>Deze website in niet onderdeel van prullenbakvaccin.nl. We brengen u alleen op de hoogte van beschikbaarheid op de website.</b> Lees eerst goed de informatie op <a href="https://www.prullenbakvaccin.nl">prullenbakvaccin.nl</a> door voordat u zich hier aanmeldt.<br>
 		U ontvangt een email als er een vaccin in de omgeving beschikbaar is op prullenbakvaccin.nl. U moet binnen 20 minuten na ontvangen van de melding bij de locatie aanwezig zijn. Er zijn meestal minder dan 10 vaccins over. <b>OP=OP</b><br>
 		Vergeet niet een geprinte <a href="https://www.nhg.org/sites/default/files/content/nhg_org/uploads/final_gezondheidsverklaring_03_2021_web.pdf" target="_blank">gezondheidscheck</a> bijdehand te hebben voor wanneer u naar een priklocatie gaat.</p>
-		<br><h1><b>Inschrijven is meer mogelijk op dit moment! Tijdsduur is onbepaald.</b></h1>
+		<br><h1><b>Inschrijven is niet meer mogelijk op dit moment! Tijdsduur is onbepaald.</b></h1>
 		<form action="" method="post">
 			<div class="form-group">
 				<div class="row">
